--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,123 +8,130 @@
   <link rel="icon" href="images/icon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body class="bg-light">
+  <style>
+    .carousel-image {
+      height: 400px;
+      object-fit: contain;
+    }
 
-<style>
-  .carousel-image {
-    height: 400px;            
-    object-fit: contain;        
-  }
-</style>
+    .nav-pills .nav-link {
+      text-align: left;
+      color: rgb(116, 123, 140);
+    }
+  </style>
 
-<div class="container py-5">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="card mb-4">
-        <img src="images/lin.jpg" class="card-img-top" alt="個人照片">
-        <div class="card-body">
-          <h4 class="card-title fw-bold">林詠庭</h4>
-          <p class="card-text">國立聯合大學<br>資訊管理學系</p>
-          <p>擅長繪圖美術設計，喜歡鑽研藝術相關的活動，<br>並加以運用在資訊管理上會遇到的任務當中。</p>
-          <hr>
-          <p><strong>Email：</strong> xiaoyang20817@email.com</p>
-          <p><strong>電話：</strong> 0909-437-371</p>
+  <div class="container py-5">
+    <div class="row">
+      <div class="col-md-2">
+        <div class="card mb-4">
+          <img src="/images/lin.jpg" class="card-img-top" alt="個人照片">
+          <div class="card-body">
+            <h4 class="card-title fw-bold">林詠庭</h4>
+            <p class="card-text">國立聯合大學<br>資訊管理學系</p>
+            <p>擅長繪圖美術設計，喜歡鑽研藝術相關的活動，並加以運用在資訊管理上會遇到的任務當中。</p>
+            <hr>
+            <p><strong>Email：</strong> xiaoyang20817@email.com</p>
+            <p><strong>電話：</strong> 0909-437-371</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="col-md-8">
-      <ul class="nav nav-tabs" id="myTab" role="tablist">
-        <li class="nav-item" ><button class="nav-link fw-bold" id="edu-tab" data-bs-toggle="tab" data-bs-target="#edu" style="color: rgb(116, 123, 140)">教育背景</button></li>
-        <li class="nav-item"><button class="nav-link fw-bold" id="exp-tab" data-bs-toggle="tab" data-bs-target="#exp" style="color: rgb(116, 123, 140)">經驗與實習</button></li>
-        <li class="nav-item"><button class="nav-link fw-bold" id="skills-tab" data-bs-toggle="tab" data-bs-target="#skills" style="color: rgb(116, 123, 140)">專業技能</button></li>
-        <li class="nav-item"><button class="nav-link fw-bold" id="projects-tab" data-bs-toggle="tab" data-bs-target="#projects" style="color: rgb(116, 123, 140)">專案作品</button></li>
-        <li class="nav-item"><button class="nav-link fw-bold" id="articles-tab" data-bs-toggle="tab" data-bs-target="#articles" style="color: rgb(116, 123, 140)">文章</button></li>
-        <li class="nav-item"><button class="nav-link fw-bold" id="awards-tab" data-bs-toggle="tab" data-bs-target="#awards" style="color: rgb(116, 123, 140)">獲獎與榮譽</button></li>
-        <li class="nav-item"><button class="nav-link fw-bold" id="photos-tab" data-bs-toggle="tab" data-bs-target="#photos" style="color: rgb(116, 123, 140)">參與活動照片</button></li>
-      </ul>
+      <div class="col-md-8">
+        <div class="tab-content p-3 border rounded bg-white">
+          <div class="tab-pane fade show active" id="edu">
+            <h4>教育背景</h4>
+            <p>國立聯合大學 資訊管理學系</p>
+          </div>
+          <div class="tab-pane fade" id="exp">
+            <h4>經驗與實習</h4>
+            <ul>
+              <li>程式設計</li>
+              <li>前端網頁設計</li>
+              <li>資料庫程式設計</li>
+            </ul>
+          </div>
+          <div class="tab-pane fade" id="skills">
+            <h4>專業技能</h4>
+            <ul>
+              <li>程式設計</li>
+              <li>網頁設計</li>
+              <li>資料庫設計</li>
+            </ul>
+          </div>
+          <div class="tab-pane fade" id="projects">
+            <h4>專案作品</h4>
+            <p style="color: rgb(189, 189, 189)">暫時還沒有其他專案作品</p>
+          </div>
+          <div class="tab-pane fade" id="articles">
+            <h4>文章</h4>
+            <p>資訊管理系可以幫助學生在面對資訊科技的同時兼顧管理的能力，培養學生不僅具備技術能力，還能擁有有效的管理和領導能力。</p>
+          </div>
+          <div class="tab-pane fade" id="awards">
+            <h4>獲獎與榮譽</h4>
+            <p style="color: rgb(189, 189, 189)">暫時還沒有其他獎項</p>
+          </div>
+          <div class="tab-pane fade" id="photos">
+            <h4>參與活動照片</h4>
+            <div id="photoCarousel" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="images/1.jpg" class="d-block carousel-image rounded mx-auto" alt="照片1">
+                  <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">1/6</div>
+                </div>
+                <div class="carousel-item">
+                  <img src="images/2.jpg" class="d-block carousel-image rounded mx-auto" alt="照片2">
+                  <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">2/6</div>
+                </div>
+                <div class="carousel-item">
+                  <img src="/images/3.png" class="d-block carousel-image rounded mx-auto" alt="照片3">
+                  <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">3/6</div>
+                </div>
+                <div class="carousel-item">
+                  <img src="/images/4.png" class="d-block carousel-image rounded mx-auto" alt="照片4">
+                  <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">4/6</div>
+                </div>
+                <div class="carousel-item">
+                  <img src="/images/icon.png" class="d-block carousel-image rounded mx-auto" alt="照片5">
+                  <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">5/6</div>
+                </div>
+                <div class="carousel-item">
+                  <img src="/images/6.jpg" class="d-block carousel-image rounded mx-auto" alt="照片6">
+                  <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">6/6</div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#photoCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"
+                  style="filter: invert(55%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(80%);"></span>
+                <span class="visually-hidden">上一張</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#photoCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"
+                  style="filter: invert(55%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(80%);"></span>
+                <span class="visually-hidden">下一張</span>
+              </button>
 
-      <div class="tab-content p-3 border border-top-0 rounded-bottom bg-white">
-        <div class="tab-pane fade" id="edu">
-          <p>國立聯合大學 資訊管理學系</p>
-          <p style="color: rgb(189, 189, 189)">暫時還沒有其他重要專案</p>
-        </div>
-        <div class="tab-pane fade" id="exp">
-          <h3 class="fw-bold">學習課程</h3>
-          <ul>
-            <li>程式設計</li>
-            <li>前端網頁設計</li>
-            <li>資料庫程式設計</li>
-          </ul>
-        </div>
-        <div class="tab-pane fade" id="skills">
-          <h3 class="fw-bold">知識與技能</h3>
-          <ul>
-            <li>程式設計</li>
-            <li>網頁設計</li>
-            <li>資料庫設計</li>
-          </ul>
-        </div>
-        <div class="tab-pane fade" id="projects">
-          <p style="color: rgb(189, 189, 189)">暫時還沒有其他專案作品</p>
-        </div>
-        <div class="tab-pane fade" id="articles">
-          <p>資訊管理系可以幫助學生在面對資訊科技的同時兼顧管理的能力，培養學生不僅具備技術能力，還能擁有有效的管理和領導能力。</p>
-          <p>在當今數位化和資訊化快速發展的時代，無論是企業還是政府機構，都面臨著如何有效運用科技來提高生產力、創新和競爭力的挑戰。</p>
-          <p>這使得資訊管理系的學生在職場上擁有廣泛的應用領域。</p>
-        </div>
-        <div class="tab-pane fade" id="awards">
-          <p style="color: rgb(189, 189, 189)">暫時還沒有其他獎項</p>
-        </div>
-        <div class="tab-pane fade" id="photos">
-          <div class="container mt-4">
-            <h3 class="mb-3">在學期間部分繪圖作品</h3>
-            <div class="row g-3">
-                <div id="photoCarousel" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="images/1.jpg" class="d-block carousel-image rounded mx-auto" alt="照片1">
-                        <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">1/6</div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/2.jpg" class="d-block carousel-image rounded mx-auto" alt="照片2">
-                        <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">2/6</div>
-                        </div>
-                      <div class="carousel-item">
-                        <img src="images/3.png" class="d-block carousel-image rounded mx-auto" alt="照片3">
-                        <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">3/6</div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/4.png" class="d-block carousel-image rounded mx-auto" alt="照片4">
-                        <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">4/6</div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/icon.png" class="d-block carousel-image rounded mx-auto" alt="照片5">
-                        <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">5/6</div>
-                      </div>
-                      <div class="carousel-item">
-                        <img src="images/6.jpg" class="d-block carousel-image rounded mx-auto" alt="照片6">
-                        <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">6/6</div>
-                      </div>
-                    </div>
-                  
-                    <button class="carousel-control-prev" type="button" data-bs-target="#photoCarousel" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">上一張</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#photoCarousel" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">下一張</span>
-                    </button>
-                  </div>
             </div>
-          </div>          
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-2">
+        <div class="nav flex-column nav-pills" role="tablist">
+          <button class="nav-link active fw-bold" data-bs-toggle="pill" data-bs-target="#edu">教育背景</button>
+          <button class="nav-link fw-bold" data-bs-toggle="pill" data-bs-target="#exp">經驗與實習</button>
+          <button class="nav-link fw-bold" data-bs-toggle="pill" data-bs-target="#skills">專業技能</button>
+          <button class="nav-link fw-bold" data-bs-toggle="pill" data-bs-target="#projects">專案作品</button>
+          <button class="nav-link fw-bold" data-bs-toggle="pill" data-bs-target="#articles">文章</button>
+          <button class="nav-link fw-bold" data-bs-toggle="pill" data-bs-target="#awards">獲獎與榮譽</button>
+          <button class="nav-link fw-bold" data-bs-toggle="pill" data-bs-target="#photos">參與活動照片</button>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
