--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="row">
       <div class="col-md-2">
         <div class="card mb-4">
-          <img src="/images/lin.jpg" class="card-img-top" alt="個人照片">
+          <img src="images/lin.jpg" class="card-img-top" alt="個人照片">
           <div class="card-body">
             <h4 class="card-title fw-bold">林詠庭</h4>
             <p class="card-text">國立聯合大學<br>資訊管理學系</p>
@@ -85,19 +85,19 @@
                   <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">2/6</div>
                 </div>
                 <div class="carousel-item">
-                  <img src="/images/3.png" class="d-block carousel-image rounded mx-auto" alt="照片3">
+                  <img src="images/3.png" class="d-block carousel-image rounded mx-auto" alt="照片3">
                   <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">3/6</div>
                 </div>
                 <div class="carousel-item">
-                  <img src="/images/4.png" class="d-block carousel-image rounded mx-auto" alt="照片4">
+                  <img src="images/4.png" class="d-block carousel-image rounded mx-auto" alt="照片4">
                   <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">4/6</div>
                 </div>
                 <div class="carousel-item">
-                  <img src="/images/icon.png" class="d-block carousel-image rounded mx-auto" alt="照片5">
+                  <img src="images/icon.png" class="d-block carousel-image rounded mx-auto" alt="照片5">
                   <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">5/6</div>
                 </div>
                 <div class="carousel-item">
-                  <img src="/images/6.jpg" class="d-block carousel-image rounded mx-auto" alt="照片6">
+                  <img src="images/6.jpg" class="d-block carousel-image rounded mx-auto" alt="照片6">
                   <div class="mt-2 text-center" style="color: rgb(189, 189, 189)">6/6</div>
                 </div>
               </div>
