--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="bg-light">
   <style>
     .carousel-image {
-      height: 400px;
+      height: 350px;
       object-fit: contain;
     }
 
@@ -20,11 +20,16 @@
       text-align: left;
       color: rgb(116, 123, 140);
     }
+
+    .nav-link.active {
+    background-color: #55718d !important;
+    font-weight: bold;
+    }
   </style>
 
   <div class="container py-5">
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-md-3">
         <div class="card mb-4">
           <img src="images/lin.jpg" class="card-img-top" alt="個人照片">
           <div class="card-body">
@@ -38,7 +43,7 @@
         </div>
       </div>
 
-      <div class="col-md-8">
+      <div class="col-md-7">
         <div class="tab-content p-3 border rounded bg-white">
           <div class="tab-pane fade show active" id="edu">
             <h4>教育背景</h4>
